--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,9 +5,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(187, 229, 147);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container{
+  margin-top: 100px;
+  width: 650px;
+  background-color: rgb(117, 139, 135);
+ 
+ 
 }
